# robot_src

01-太湖简易巡逻车/: 主板配置记录.doc
01-太湖简易巡逻车/06-controller_232_for_sython_400W_v4/: 70-persistent-net.rules  clean.sh  commond.txt  rc.local  readme.txt
02-步科四驱路虎/: 70-ttyS.rules  autorun.sh  commond.txt
02-步科四驱路虎/launch/: Controller-test.launch  QController.launch
02-步科四驱路虎/msg/: JoyFeedback.h  LaserScan.h  ctrl_ModeMessage.h
02-步科四驱路虎/worksapce/: 70-ttyXR.rules  70-ttymxc.txt  Kill.sh  readme.txt
03-E9控制的自动门/autodoor_V1/: commond.txt  rc.local
05-STM32运动控制板上位机测试/01-MCtrlterminal/: 01-MCtrlterminal.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  uart_Mode.cpp  uart_Mode.hpp  运动控制主板通信协议（V1.0.4）.doc
05-STM32运动控制板上位机测试/01-MCtrlterminal（pub）/: sscom.ini
06-海康相机Ubuntu1404Node/CH_HCNetSDK_V5.3.5.2_build20171124_Linux64/: readme.txt
08-STM32运动控制板工控机差速控制终端/: 70-ttyS.rules
08-STM32运动控制板工控机差速控制终端/DriverController_V1/: 70-ttyXR.rules  Kill.sh  autorun.sh
08-STM32运动控制板工控机差速控制终端/DriverController_V1/src/dgvmsg/: CMakeLists.txt
08-STM32运动控制板工控机差速控制终端/DriverController_V1/src/dgvmsg/msg/: DriverStatues.msg  DriverVelocity.msg  Encounter.msg  ExternSensor.msg  ctrl_ModeMessage.msg
08-STM32运动控制板工控机差速控制终端/launch/: Controller-test.launch  driver.launch
08-STM32运动控制板工控机差速控制终端/log/: zlog.conf
09-路虎串口控制测试上位机/04-Sim_LaserCtrl/: 04-Sim_LaserCtrl.pro  laser_ctrl_Mode.cpp  laser_ctrl_Mode.hpp  (+3 more)
10-IDC协处理采集板上位机控制程序/: 02-IDC_CoProcessor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  uart_Mode.cpp  uart_Mode.hpp  协处理采集主板需求通信协议（V1.0.6.doc
(+627 files in other folders)
